07_cert_manager/02_istio_ingress/istio-gateway-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway-tls
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "onlineboutique.192.168.50.106.nip.io"
    tls:
      credentialName: ob-tls-ca-key
      mode: SIMPLE
