07_cert_manager/02_istio_ingress/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "onlineboutique.192.168.50.106.nip.io"
  gateways:
  - frontend-gateway-tls
  http:
  - route:
    - destination:
        host: frontend
